# photobrain

./: .env.example  README.md  docker-compose.yml
backend/: README_BACKEND.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: domain.py
backend/app/services/: catalog.py  mock_data.py
backend/scripts/: build_timelapse.py  ingest_sd_card.py  process_new_photos.py
backend/tests/: test_api.py
backend/tests/data/photovault/metadata/json/: catalog.json
docs/: api-spec.md  architecture.md  instructions.md  pi-instructions.md  ui-spec.md
frontend/: README_FRONTEND.md  package.json  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/app/photos/: page.tsx
frontend/src/app/shoots/: page.tsx
frontend/src/app/system/: page.tsx
frontend/src/app/timelapses/: page.tsx
frontend/src/lib/: api.ts  mockData.ts
frontend/src/types/: index.ts
launchd/: com.photobrain.ingest.plist  com.photobrain.maintenance.plist  com.photobrain.process.plist
scripts/: bootstrap_macos.sh  dev_start.sh  run_tests.sh
