[project]
name = "photobrain-backend"
version = "0.1.0"
description = "PhotoBrain FastAPI backend"
authors = [{name = "PhotoBrain"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=1.10",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
